2010-11-29  Roland Levillain  <roland@lrde.epita.fr>

	Address clang's warnings.

	* mln/algebra/h_vec.hh,
	* mln/core/image/dmorph/sub_image.hh,
	* mln/core/internal/pixel_impl.hh,
	* mln/core/site_set/box.hh,
	* mln/core/site_set/p_array.hh,
	* mln/metal/vec.hh,
	* mln/pw/internal/image_base.hh,
	* mln/topo/adj_higher_face_iter.hh,
	* mln/topo/adj_lower_face_iter.hh,
	* mln/topo/algebraic_face.hh,
	* mln/topo/face.hh,
	* mln/topo/face_data.hh:
	Use `class' and `struct' uniformly in declarations and
	definitions.
	* mln/convert/impl/from_double_to_value.hh,
	* mln/convert/impl/from_float_to_value.hh,
	* mln/convert/impl/from_int_to_value.hh,
	* mln/core/image/complex_window_piter.hh,
	* mln/core/point.hh,
	* mln/opt/element.hh,
	* mln/value/lut_vec.hh:
	Comment out unused arguments.
	* mln/topo/complex.hh [NDEBUG]:	Avoid a warning about an unused
	variable.

2009-10-06  Roland Levillain  <roland@lrde.epita.fr>

	Update tests/core/image/graph_image.

	* tests/core/image/graph_image.cc (main): Actually print the
	graph.
	Update comments.

2011-06-09  Roland Levillain  <roland@lrde.epita.fr>

	Make Milena's copyright headers uniform.

	* apps/mesh-segm-skel/io.hh,
	* apps/mesh-segm-skel/mesh-complex-max-curv-segm.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv.cc,
	* apps/mesh-segm-skel/mesh-complex-segm.cc,
	* apps/mesh-segm-skel/mesh-complex-skel.cc,
	* apps/mesh-segm-skel/mesh-max-curv.cc,
	* apps/mesh-segm-skel/mesh-pinv-curv.cc,
	* apps/mesh-segm-skel/mesh-segm.cc,
	* apps/mesh-segm-skel/mesh-skel.cc,
	* apps/mesh-segm-skel/off-to-vtk-bin.cc,
	* apps/mesh-segm-skel/save_bin_alt.hh,
	* apps/mesh-segm-skel/trimesh/misc.hh,
	* apps/papers/levillain.09.ismm/complex.cc,
	* apps/papers/levillain.09.ismm/image2d.cc,
	* doc/benchmark/canvas.cc,
	* doc/benchmark/median/median_bench.cc,
	* doc/benchmark/morpho/erosion.cc,
	* doc/examples/trash/erosion.cc,
	* doc/examples/trash/graph.cc,
	* doc/examples/trash/labeling_algo.cc,
	* doc/examples/trash/mk_graph.cc,