@@ -1,4 +1,5 @@
-// Copyright (C) 2007, 2008, 2009 EPITA Research and Development Laboratory (LRDE)
+// Copyright (C) 2007, 2008, 2009, 2010 EPITA Research and Development
+// Laboratory (LRDE)
 //
 // This file is part of Olena.
 //
@@ -78,14 +79,6 @@ namespace mln
 	// FIXME: check for ambiguities...
       }
 
-      // dispatch
-
-      template <typename I, typename D>
-      void fill_dispatch(Image<I>& ima, const D& data)
-      {
-	fill_dispatch_overload(exact(ima), exact(data));
-      }
-
       // dispatch_overload
 
       template <typename I>
@@ -125,6 +118,14 @@ namespace mln
 	unsigned i = 0;
 	for_all(p)
 	  ima(p) = arr[i++];
+      }
+
+      // dispatch
+
+      template <typename I, typename D>
+      void fill_dispatch(Image<I>& ima, const D& data)
+      {
+	fill_dispatch_overload(exact(ima), exact(data));
       }
 
     } // end of namespace mln::data::internal
